// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarNav should handle click 1`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
  <scale-sidebar-nav-item nesting-level="1"></scale-sidebar-nav-item>
</scale-sidebar-nav>
`;

exports[`SidebarNav should handle scale-sidebar-nav-collapsuible child 1`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
  <scale-sidebar-nav-collapsible nesting-level="1"></scale-sidebar-nav-collapsible>
</scale-sidebar-nav>
`;

exports[`SidebarNav should handle scale-sidebar-nav-collapsuible child level 1 1`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
  <scale-sidebar-nav-collapsible nesting-level="1">
    <scale-sidebar-nav-item nesting-level="2"></scale-sidebar-nav-item>
  </scale-sidebar-nav-collapsible>
</scale-sidebar-nav>
`;

exports[`SidebarNav should handle scale-sidebar-nav-collapsuible child level 2 1`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
  <scale-sidebar-nav-collapsible nesting-level="1">
    <scale-sidebar-nav-collapsible condensed="true" nesting-level="2">
      <scale-sidebar-nav-item condensed="true" nesting-level="3"></scale-sidebar-nav-item>
    </scale-sidebar-nav-collapsible>
  </scale-sidebar-nav-collapsible>
</scale-sidebar-nav>
`;

exports[`SidebarNav should handle scale-sidebar-nav-collapsuible child level 2 2`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
  <scale-sidebar-nav-collapsible nesting-level="1">
    <scale-sidebar-nav-collapsible condensed="true" nesting-level="2">
      <scale-sidebar-nav-item condensed="true" nesting-level="3"></scale-sidebar-nav-item>
      <scale-sidebar-nav-item condensed="true" nesting-level="3"></scale-sidebar-nav-item>
    </scale-sidebar-nav-collapsible>
  </scale-sidebar-nav-collapsible>
</scale-sidebar-nav>
`;

exports[`SidebarNav should handle scale-sidebar-nav-item child 1`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
  <scale-sidebar-nav-item nesting-level="1"></scale-sidebar-nav-item>
</scale-sidebar-nav>
`;

exports[`SidebarNav should match snapshot 1`] = `
<scale-sidebar-nav collapsible="">
  <template shadowrootmode="open">
    <div class="sidebar-nav sidebar-nav--collapsible" part="sidebar-nav collapsible">
      <button aria-expanded="false" class="sidebar-nav__toggle-button" part="toggle-button">
        Menu
        <scale-icon-navigation-collapse-down class="sidebar-nav__icon" part="icon" size="20"></scale-icon-navigation-collapse-down>
      </button>
      <nav hidden="" part="nav">
        <ul class="sidebar-nav__list" part="list" role="list">
          <slot></slot>
        </ul>
      </nav>
    </div>
  </template>
</scale-sidebar-nav>
`;
